# haskell-stuff

./: README.md  votos
Cesar/: cifracesar.cabal
Cesar/src/: Cesar.hs
Listas/: Main.hs  lista05.hs  lista06.hs  lista1.md  lista2.md
kmeans/: Wine_Quality_DataClean.csv  kmeans.cabal
kmeans/src/: KMeansPar.hs  Main.hs
src/: Main.hs  Test.hs
