name:                kmeans
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/kmeans#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable kmeans
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -eventlog -O2
  other-modules:       KMeansPar
  build-depends:       base >= 4.7 && < 5,
                       parallel,
                       formatting,
                       clock,
                       split,
                       deepseq,
                       array
